--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,12 @@
 body {
+    /* font, weight, size (px), color, alignment */
     background-color: #000000;
     text-align: center;
-    
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.header--main{
+    font-weight: normal;
+    font-size: 50px;
+    color: white;
 }
