--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,5 @@
+/* font, weight, size (px), color, alignment */
 body {
-    /* font, weight, size (px), color, alignment */
     background-color: #000000;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -9,4 +9,9 @@ body {
     font-weight: normal;
     font-size: 50px;
     color: white;
+}
+
+.link--cta{
+    font-size: 16px;
+    color: aquamarine;
 }
